# Insight-Manifest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-gui.yml  build-latex-report.yml  deploy-and-notify.yml  deploy-mkdocs.yml
config/: config.yaml
data/: test_coverage.xlsx
gui/: main.py
report/: report.tex
src/: data_loader.py  main.py  notify.py  plotter.py  reporter.py
templates/: report_template.tex
