[tool.poetry]
name = "Insight-Manifest"
version = "0.1.0"
description = "..."
authors = ["M. Cagri Catik <mustafa_cagri.catik@daimlertruck.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
numpy = "1.24.3"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"
pyside6 = "^6.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
